--- a/src/Index.html
+++ b/src/Index.html
@@ -20,7 +20,7 @@
     <li>Engl 331</li>
 </ul>
 
-<img src="img/MyPicture.jpg" alt="My Picture" width="200">
+<img src= "src/Img/MyPicture.jpg"  alt="My Picture" width="200">
 <a href="introduction.html">Click the link to go to the next page</a>
 
 </body>
