--- a/src/Index.html
+++ b/src/Index.html
@@ -21,7 +21,7 @@
 </ul>
 
 <img src= "src/Img/MyPicture.jpg"  alt="My Picture" width="200">
-<a href="introduction.html">Click the link to go to the next page</a>
+<a href="src/Introduction.html">Click the link to go to the next page</a>
 
 </body>
 </html>
