--- a/src/Introduction.html
+++ b/src/Introduction.html
@@ -35,7 +35,7 @@
 </table>
 
 <img src="img/CyberImg.jpg" alt="Cyber Img 1" width="200">
-<img src="img/CyberImg2.jpg" alt="Cyber Img 2" width="200">
+<img src="src/Img/CyberImg2.jpg" alt="Cyber Img 2" width="200">
 <a href="index.html">Click the link to go back to index</a>
 
 </body>
