--- a/src/Introduction.html
+++ b/src/Introduction.html
@@ -34,7 +34,7 @@
     </tr>
 </table>
 
-<img src="img/CyberImg.jpg" alt="Cyber Img 1" width="200">
+<img src="src/Img/CyberImg.jpg" alt="Cyber Img 1" width="200">
 <img src="src/Img/CyberImg2.jpg" alt="Cyber Img 2" width="200">
 <a href="index.html">Click the link to go back to index</a>
 
