--- a/src/Introduction.html
+++ b/src/Introduction.html
@@ -37,6 +37,7 @@
 <img src="src/Img/CyberImg.jpg" alt="Cyber Img 1" width="200">
 <img src="src/Img/CyberImg2.jpg" alt="Cyber Img 2" width="200">
 <a href="Index.html">Click the link to go back to index</a>
+<a href = "src/Test.html">Click the link to go to little prince
 
 </body>
 </html>
