--- a/A2/Index.html
+++ b/A2/Index.html
@@ -20,7 +20,7 @@
     <li>Engl 331</li>
 </ul>
 
-<img src="C:\Users\49erb\OneDrive\Desktop\src\Img\MyPicture.jpg" alt="My Picture" width="200">
+<img src= "A2/Img/CyberImg.jpg" alt="My Picture" width="200">
 <a href="Introduction.html">Click the link to go to the next page</a>
 
 
