--- a/A2/Introduction.html
+++ b/A2/Introduction.html
@@ -34,7 +34,7 @@
     </tr>
 </table>
 
-<img src="C:\Users\49erb\OneDrive\Desktop\src\Img\CyberImg.jpg"alt="Cyber Img 1" width="200">
+<img src="/Img/CyberImg.jpg"alt="Cyber Img 1" width="200">
 <img src="C:\Users\49erb\OneDrive\Desktop\src\Img\CyberImg2.jpg" alt="Cyber Img 2" width="200">
 <a href="Index.html">Click the link to go back to index</a>
     <br>
