--- a/A2/Index.html
+++ b/A2/Index.html
@@ -20,7 +20,7 @@
     <li>Engl 331</li>
 </ul>
 
-<img src= "https://github.com/Bford123/Bford123.github.io/blob/main/A2/Img/CyberImg.jpg?raw=true" alt="My Picture" width="200">
+<img src= ""C:\Users\49erb\OneDrive\Documents\GitHub\Comp322HW2\A2\Img\CyberImg.jpg"" alt="My Picture" width="200">
 <a href="Introduction.html">Click the link to go to the next page</a>
 
 
