--- a/A2/Introduction.html
+++ b/A2/Introduction.html
@@ -38,7 +38,7 @@
 <img src="C:\Users\49erb\OneDrive\Desktop\src\Img\CyberImg2.jpg" alt="Cyber Img 2" width="200">
 <a href="Index.html">Click the link to go back to index</a>
     <br>
-<a href = "file:///C:/Users/49erb/OneDrive/Documents/GitHub/Comp322HW2/A2/little_prince.html">Click the link to go to little prince
+<a href = "little_prince.html">Click the link to go to little prince
 
 </body>
 </html>
