--- a/A2/Introduction.html
+++ b/A2/Introduction.html
@@ -34,8 +34,8 @@
     </tr>
 </table>
 
-<img src="Img/CyberImg.jpg"alt="Cyber Img 1" width="200">
-<img src="Img/CyberImg2.jpg" alt="Cyber Img 2" width="200">
+<img src="CyberImg.jpg"alt="Cyber Img 1" width="200">
+<img src="Img/CyberImg2.jpg"alt="Cyber Img 2" width="200">
 <a href="Index.html">Click the link to go back to index</a>
     <br>
 <a href = "little_prince.html">Click the link to go to little prince</a>
